--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,21 @@
-
-
 /* Import Google Fonts (Lilita One, Oswald, Roboto) */
 @import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Oswald:wght@200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-*{
+* {
      margin: 0;
      padding: 0;
+     /* width: 100vh; */
      box-sizing: border-box;
 }
 
 :root {
      /* Fonts Family */
      --roboto-font: "Roboto", sans-serif;
-     --lilita-font: "Lilita One", sans-serif,cursive;
+     --lilita-font: "Lilita One", sans-serif, cursive;
      --oswald-font: "Oswald", sans-serif;
-   
+
      /* Colors */
      --light-black: #333;
      --light-white: #f7f7f7;
@@ -28,38 +27,45 @@
      --grey: #757575;
      --brown: #6f5e4d;
      --bg-coffee: #642f21;
-   }
+}
 
 
-body,html{
+body,
+html {
      font-size: 1rem;
      font-family: var(--roboto-font);
      font-weight: 300;
 }
 
 @media (max-width:992px) {
-     
-     body,html{
+
+     body,
+     html {
           font-size: 0.875rem
      }
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
      font-family: var(--oswald-font);
      font-weight: 500;
      text-transform: uppercase;
      line-height: 1.3;
 }
 
-p{
+p {
      font-size: 1rem;
 
 }
 
-a{
+a {
      color: var(--light-black);
      text-decoration: none;
-     -webkit-transition:all 4s ease-in-out;
+     -webkit-transition: all 4s ease-in-out;
      -moz-transition: all 4s ease-in-out;
      -o-transition: all 4s ease-in-out;
      -ms-transition: all 4s ease-in-out;
@@ -68,20 +74,21 @@ a{
 }
 
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
      width: 5px;
 
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
      background: var(--light-white);
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
      background: var(--yellow);
 }
 
 
-.order_now{
+.order_now {
      color: var(--light-black);
      background: var(--yellow);
      border-color: var(--yellow);
@@ -96,19 +103,21 @@ a{
 }
 
 
-.order_now:hover, .order_now:focus{
+.order_now:hover,
+.order_now:focus {
      color: var(--white);
      background: transparent;
      border-color: var(--white);
 }
-.btn_red{
+
+.btn_red {
      color: var(--white);
      background: var(--light-red);
      border-color: var(--light-red);
 }
-.btn_red:hover{
+
+.btn_red:hover {
      color: var(--light-red);
      background: transparent;
      border-color: var(--light-red);
 }
-
